--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tracker-utils",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Tracker Utils",
   "main": "index.js",
   "scripts": {
@@ -15,6 +15,8 @@
   "dependencies": {
     "bluebird": "^3.5.0",
     "lodash": "^4.17.4",
+    "memcached": "^2.2.2",
+    "redis": "^2.8.0",
     "shortid": "^2.2.8"
   }
 }
