--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Hemant Mann <hemant.mann@vnative.com>",
   "homepage": "https://bitbucket.org/cloudstuffinc/tracker-utils#readme",
   "dependencies": {
+    "@google-cloud/pubsub": "^0.20.0",
     "bluebird": "^3.5.0",
     "is-ip": "^2.0.0",
     "lodash": "^4.17.4",
