--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lodash": "^4.17.4",
     "memcached": "^2.2.2",
     "redis": "^2.8.0",
-    "shortid": "^2.2.8"
+    "shortid": "^2.2.8",
+    "mongoose": "^5.12.7"
   }
 }
