--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tracker-utils",
-  "version": "1.4.19",
+  "version": "1.4.20",
   "description": "Tracker Utils",
   "main": "index.js",
   "scripts": {
@@ -15,11 +15,13 @@
   "dependencies": {
     "@google-cloud/pubsub": "^1.1.3",
     "bluebird": "^3.5.0",
+    "ejs": "^3.1.6",
     "is-ip": "^2.0.0",
     "lodash": "^4.17.4",
+    "mailgun-js": "^0.22.0",
     "memcached": "^2.2.2",
+    "mongoose": "^5.12.7",
     "redis": ">=3.1.1",
-    "shortid": "^2.2.8",
-    "mongoose": "^5.12.7"
+    "shortid": "^2.2.8"
   }
 }
