--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "mailgun-js": "^0.22.0",
     "memcached": "^2.2.2",
     "mongoose": "^5.12.7",
-    "redis": ">=3.1.1",
+    "redis": "3.1.1",
     "shortid": "^2.2.8"
   }
 }
